wasm-demo/wasm-plugin-transformer/httpbin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-svc
spec:
  selector:
    name: httpbin-pod
  ports:
  - port: 8888
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: httpbin-pod
  labels:
    name: httpbin-pod
spec:
  containers:
  - image: kennethreitz/httpbin:latest
    imagePullPolicy: IfNotPresent
    name: httpbin
    ports:
    - containerPort: 80
    resources:
      limits:
        cpu: 500m
        memory: 128Mi
