wasm-demo/wasm-plugin-transformer/foo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo
  namespace: higress-system
  annotations:
    higress.io/destination: httpbin-svc.default.svc.cluster.local:8888
spec:
  ingressClassName: higress
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          resource:
            apiGroup: networking.higress.io
            kind: McpBridge
            name: default
        path: /
        pathType: Prefix
